--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ flask==3.1.0
 gunicorn==23.0.0
 requests==2.32.3
 curl_cffi==0.7.4
+cloudscraper==1.2.71
 beautifulsoup4==4.12.3
 pdfplumber==0.11.4
 lxml==5.3.0
